# Job-crawler

./: .env.template  .gitignore  CMakeLists.txt  sde_1_uber_jobs.txt
include/: AIAgent.hpp  JobCrawler.hpp  utils.hpp
src/: AIAgent.cpp  JobCrawler.cpp  main.cpp  utils.cpp
